# libtropic-rs

./: Cargo.toml  flake.nix  validate-cert-chain.sh
examples/: show-chip-id.rs
hal/: Cargo.toml
hal/src/: lib.rs  usb.rs
tropic01/: Cargo.toml
tropic01-example-usb/: Cargo.toml  README.md
tropic01-example-usb/examples/: ecc-key-gen.rs  get-certs.rs  get-device-cert.rs  get-device-pubkey.rs  mcounter.rs  secure-session.rs  show-chip-id.rs  verify-certs.rs  verify-firmware.rs
tropic01-example-usb/src/: cert.rs  chipid.rs  lib.rs  main.rs  port.rs
tropic01-example-usb/tests/: chipid.rs  lt_test_rev_mcounter.rs
tropic01-zkvm-attestation/: .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  NIX_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  build.rs  build.sh  flake.nix
tropic01-zkvm-attestation/methods/guest/: Cargo.toml
tropic01-zkvm-attestation/methods/guest/src/: main.rs
tropic01-zkvm-attestation/src/: lib.rs  main.rs  proof_generator.rs  session_recorder.rs  verifier.rs
tropic01/src/: common.rs  crypto.rs  keys.rs  lib.rs  lt_2.rs  lt_3.rs
utils/: Cargo.toml
utils/src/: lib.rs  x509.rs
