[package]
name = "hal"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tropic01 = { path = "../tropic01", default-features = false, features = [
  "keys",
  "x25519-dalek",
] }
dummy-pin = { version = "1.0.0", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
linux-embedded-hal = { version = "0.4.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
rppal = { version = "0.22.1", features = ["embedded-hal"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = [
  "static_secrets",
] }
sha2 = { version = "0.10.9", default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
embedded-hal = "1.0.0"
serialport = "4.5.0"
log = "0.4"
hex = "0.4.3"
# XXX
x509-parser = "0.18.0"
reqwest = "0.12.24"
openssl = "0.10.74"
pem = "3.0.6"

[lints]
workspace = true
