[package]
name = "tropic01-zkvm-attestation"
description = "zkVM-based remote attestation for TROPIC01"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tropic01 = { path = "../tropic01", default-features = false, features = ["keys"] }
tropic01-example-usb = { path = "../tropic01-example-usb" }

# SP1 zkVM dependencies
sp1-sdk = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"

[build-dependencies]
sp1-build = "4.0.0"

[lints]
workspace = true

[workspace]
# Note: This would normally be added to the main workspace Cargo.toml
# For now, we'll keep it separate to avoid modifying the main workspace
