[package]
name = "utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
x509-parser = { git = "https://github.com/sbellem/x509-parser.git", branch = "dev", features = ["verify-aws", "validate"] }

[lints]
workspace = true
